<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/color_light_gray_bg"
              android:orientation="vertical">

    <include
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_title_height"
            layout="@layout/layout_header"/>

    <!-- 实缴费用 -->

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/padding_large"
            android:layout_marginTop="20dip"
            android:background="@color/color_white"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/padding_medium">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:text="@string/vip_pay_fragment_paid_fee"
                android:textColor="@color/color_dark_gray"
                android:textSize="@dimen/base_text_size_small"/>

        <TextView
                android:id="@+id/vip_pay_fragment_paid_fee_moeny"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/padding_small"
                android:textColor="@color/color_black"
                android:textSize="@dimen/base_text_size_small"/>
    </LinearLayout>

    <TextView
            android:id="@+id/vip_pay_fragment_addcar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/vip_fragment_layout_margin"
            android:background="@drawable/addcar"
            android:gravity="center"
            android:layout_gravity="center"
            android:padding="@dimen/vip_fragment_padding"
            android:text="@string/vip_pay_fragment_add_binding_car"
            android:textColor="@color/truck_text"
            android:textSize="@dimen/base_text_size_medium"/>

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/vip_pay_fragment_add_binding_car_info"
            android:textColor="@color/truck_text"
            android:textSize="@dimen/base_text_size_small"/>

    <!-- 支付宝支付 微信支付 -->

    <me.wztc.ui.RadioView
            android:id="@+id/vip_pay_fragment_pay_type"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_tiny_small"/>

    <Button
            android:id="@+id/vip_pay_fragment_confrim_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/pay_fragment_layout_margin_large"
            android:background="@drawable/green_bg_button"
            android:gravity="center"
            android:text="@string/pay_fragment_confirm_pay"
            android:textColor="@color/color_white"
            android:textSize="@dimen/base_text_size_medium"/>

</LinearLayout>